--- a/FoodDeliveryApp/foodcatalogue/src/main/resources/application.properties
+++ b/FoodDeliveryApp/foodcatalogue/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=userInfo
+spring.application.name=foodcatalogue
 
-server.port=9092
+server.port=9094
 
-spring.datasource.url=jdbc:mysql://localhost:3306/UserDB
+spring.datasource.url=jdbc:mysql://localhost:3306/FoodCatalogueDB
 spring.datasource.username=riwajrai
 spring.datasource.password=RiwajRai@0467
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,5 +14,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=eureka-0
 
 
