--- a/FoodDeliveryApp/order/src/main/resources/application.properties
+++ b/FoodDeliveryApp/order/src/main/resources/application.properties
@@ -1,1 +1,48 @@
 spring.application.name=OrderMS
+
+
+
+# Server Configuration
+server.port=8080
+
+# Hibernate and JPA Properties (if using Spring Data JPA elsewhere)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MongoDialect
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.fooddelivery=DEBUG
+
+
+spring.profiles.active=dev
+
+#Eureka Config
+# Eureka Configuration
+eureka.instance.preferIpAddress=true
+eureka.instance.hostname=eureka-0
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+
+
+# Spring MongoDB Configuration
+
+spring.data.mongodb.uri=mongodb+srv://admin:codedecode@atlas-cluster.mqdj7js.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.host=atlas-cluster.mqdj7js.mongodb.net
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=orderdb
+spring.data.mongodb.repositories.enabled=true
+
+
+
+ 
+
+# Security (Optional: Enable if needed)
+# spring.security.user.name=admin
+# spring.security.user.password=password
+
+# Other Configuration
+# Add any custom properties relevant to your application
+
