--- a/FoodDeliveryApp/UserInfo/src/main/resources/application.properties
+++ b/FoodDeliveryApp/UserInfo/src/main/resources/application.properties
@@ -15,4 +15,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=USER-SERVICE
 
