--- a/FoodDeliveryApp/order/src/main/resources/application.properties
+++ b/FoodDeliveryApp/order/src/main/resources/application.properties
@@ -29,12 +29,19 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Spring MongoDB Configuration
 
-spring.data.mongodb.uri=mongodb+srv://admin:codedecode@atlas-cluster.mqdj7js.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.host=atlas-cluster.mqdj7js.mongodb.net
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/orderdb
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=orderdb
 spring.data.mongodb.repositories.enabled=true
 
+#spring.data.mongodb.uri=mongodb+srv://admin:codedecode@atlas-cluster.mqdj7js.mongodb.net/?retryWrites=true&w=majority
+#spring.data.mongodb.host=atlas-cluster.mqdj7js.mongodb.net
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=OrderDB
+#spring.data.mongodb.repositories.enabled=true
+#
 
 
  
