Few more restaurant-list features added with images

--- a/FoodDeliveryApp/food-delivery-app/tsconfig.json
+++ b/FoodDeliveryApp/food-delivery-app/tsconfig.json
@@ -13,7 +13,8 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "moduleResolution": "bundler",
+    "strictPropertyInitialization": false,
+    "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022"
