--- a/FoodDeliveryApp/foodcatalogue/src/main/resources/application.properties
+++ b/FoodDeliveryApp/foodcatalogue/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=foodcatalogue
 
 server.port=9094
 
-spring.datasource.url=jdbc:mysql://localhost:3306/FoodCatalogueDB
+spring.datasource.url=jdbc:mysql://localhost:3306/FoodCatalogueFinalDB
 spring.datasource.username=riwajrai
 spring.datasource.password=RiwajRai@0467
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
