--- a/FoodDeliveryApp/UserInfo/src/main/resources/application.properties
+++ b/FoodDeliveryApp/UserInfo/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=USER-SERIVCE
 
 server.port=9092
 
-spring.datasource.url=jdbc:mysql://localhost:3306/FoodDeliveryUserDB
+spring.datasource.url=jdbc:mysql://localhost:3306/FoodDBInfoUser
 spring.datasource.username=riwajrai
 spring.datasource.password=RiwajRai@0467
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -21,11 +21,9 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
-
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 eureka.instance.hostname=USER-SERVICE
-
 
 # Admin credentials 
 admin.username=your_admin_username 
