--- a/FoodDeliveryApp/food-delivery-app-FE/package.json
+++ b/FoodDeliveryApp/food-delivery-app-FE/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.0",
+    "@angular/animations": "^19.1.3",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -23,6 +23,7 @@
     "@angular/ssr": "^19.0.6",
     "bootstrap": "^4.5.2",
     "express": "^4.18.2",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
